Fixes to index. Mobile images on index are now normal sized and not stretched out. Fixes to the bulkiness of the index.css and index.php.

--- a/public/src/css/index.css
+++ b/public/src/css/index.css
@@ -6,53 +6,32 @@
 */
 
 .container {
-    height: 100vh;
-    width: 600px;
-    margin: auto;
-    background-color:  #003366;
-}
-
-.category
-{
-    height: 100%;
-    width: 300px;
+    height: 700px;
+    width: 700px;
     margin: 50px auto;
     padding: 0;
-    display: inline-block;
+    text-align: center;
     font-family: 'Impact', Charcoal, sans-serif;
-    font-size: 32px;
+    font-size: 16px;
     color: #3399ff;
-    text-align: center;
 }
 
-.music,
-.artwork {
-    height: 50%;
-    width: 90%;
-    margin: auto;
-    text-align: center;
-    display: block;
-    background-color: white;
-    -webkit-transition: all .2s;
+.category {
+    height: 300px;
+    width: 250px;
+    margin: 0 25px;
+    display: inline-block;
+    transition: all .5s;
 }
 
-.music:hover,
-.music:active,
-.artwork:hover,
-.artwork:active 
-{
-    height: 55%;
-    transition: .6s all ;
-    border: 3px solid #3399ff;
-    
-}
-
-.images {
+.category img {
     height: 100%;
     width: 100%;
+    transition: all .5s;
 }
 
-img {
-    height: 100%;
-    width: 100%;
+.category img:hover {
+    height: 110%;
+    border: 2px solid #3399ff;
+    transition: all .5s;
 }
